--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
-  "extends": "./tsconfig.base.json",
-  "compilerOptions": {
-    "sourceMap": true,
-    "outDir": "./build",
-    "strictNullChecks": false,
-    "skipLibCheck": true,
-  },
-  "include": [
-    "**/*.js",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+	"compilerOptions": {
+		"target": "ES2023",
+		"module": "Node16",
+		"moduleResolution": "Node16",
+		"lib": ["ES2023"],
+		"outDir": "dist",
+		"rootDir": "src",
+		"strict": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"declaration": true
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "dist"]
 }
